homelab-gitops/apps/dirt/base/stash-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stash
  namespace: dirt
spec:
  selector:
    app: stash
  ports:
    - name: http
      port: 80
      targetPort: 9999
  type: ClusterIP
