homelab-gitops/apps/dirt/base/whisparr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisparr
  namespace: dirt
spec:
  selector:
    app: whisparr
  ports:
    - name: http
      port: 80
      targetPort: 6969
  type: ClusterIP
